# lesson-django-homework

./: .flake8  .gitignore  .travis.yml  README.md  celery_results.sqlite3  pyproject.toml  requirements.txt
app/: celery.py  middleware.py  settings.py  urls.py
home/: admin.py  apps.py  emails.py  forms.py  models.py  serializers.py  signals.py  tasks.py  tests.py  views.py
home/migrations/: 0001_initial.py  0002_auto_20201206_1700.py  0003_auto_20201206_1757.py  0004_student_social_url.py  0005_auto_20201215_1304.py  0006_auto_20201220_2123.py  0007_auto_20201220_2238.py  0008_auto_20201221_0757.py  0009_auto_20201221_0915.py  0010_auto_20201221_1126.py  0011_auto_20210104_1356.py  0012_auto_20210104_1525.py  0013_auto_20210104_1530.py  0014_auto_20210104_1541.py  0015_auto_20210104_1625.py  0016_auto_20210104_1729.py  0017_auto_20210105_1322.py  0018_currency.py  0019_auto_20210113_2130.py  0020_currency_date.py  0021_auto_20210119_1626.py  0022_auto_20210119_1633.py  0023_auto_20210119_1701.py  0024_student_picture.py  0025_remove_student_picture.py  0026_student_picture.py  0027_auto_20210303_1255.py  0028_auto_20210316_2041.py  0029_auto_20210316_2043.py  0030_auto_20210316_2044.py  0031_auto_20210316_2044.py  0032_auto_20210324_1244.py  0033_auto_20210324_1254.py  0034_auto_20210324_1256.py  0035_auto_20210324_1316.py  0036_auto_20210324_1323.py  0037_auto_20210324_1324.py  0038_auto_20210324_1443.py  0039_remove_student_created_at.py  0040_student_created_at.py  (+5 more)
home/static/: FNru.csv
home/templates/: base.html  index.html  login.html  report_card_delete.html  (+13 more)
(+2 files in other folders)
